--- a/formulario.html
+++ b/formulario.html
@@ -1,30 +1,101 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario</title>
-</head>
-<body>
-    <h1>Formulario de Registro de Alumno</h1>
-    <form method="POST" action="{% url 'registrar_alumno' %}">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Formulario con Banner</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
+    <style>
+        :root{
+        --bg-1: #0f172a;
+        --bg-2: #0b3d91;
+        --accent-1: #ffb86b;
+        --accent-2: #7ce7c6;
+        --glass: rgba(255,255,255,0.06);
+        --card-radius: 18px;
+        --shadow: 0 8px 30px rgba(2,6,23,0.6);
+        }
+        *{box-sizing:border-box}
+        body{
+        margin:0;font-family:'Poppins',sans-serif;
+        background: linear-gradient(135deg, var(--bg-1) 0%, #09203f 45%, var(--bg-2) 100%);
+        color: #e6eef8; padding:40px;
+        }
+        .banner{
+        width:100%;max-width:980px;margin:0 auto 40px;
+        display:grid;grid-template-columns:120px 1fr;gap:24px;align-items:center;
+        background: rgba(255,255,255,0.03);
+        backdrop-filter: blur(6px);
+        border-radius: var(--card-radius);box-shadow:var(--shadow);
+        padding:22px 28px;position:relative;overflow:hidden;
+        }
+        .avatar{width:120px;height:120px;border-radius:18px;background:rgba(255,255,255,0.06);
+        display:flex;align-items:center;justify-content:center;box-shadow: 0 6px 18px rgba(2,6,23,0.5);
+        }
+        .initials{font-weight:800;font-size:34px;background: linear-gradient(90deg,var(--accent-1),var(--accent-2));
+        -webkit-background-clip: text;
+        background-clip: text;
+        color:transparent;
+        }
+        .title{font-size:28px;font-weight:800;margin:0;}
+        form{
+        max-width:600px;margin:0 auto;background:rgba(255,255,255,0.05);
+        padding:24px;border-radius:var(--card-radius);box-shadow:var(--shadow);
+        }
+        label{display:block;margin:12px 0 6px;font-weight:600}
+        input{width:100%;padding:10px;border-radius:8px;border:none;margin-bottom:16px;font-size:15px}
+        button{padding:12px 24px;font-size:16px;font-weight:600;border:none;border-radius:999px;cursor:pointer;
+        background:linear-gradient(90deg,var(--accent-1),var(--accent-2));color:#0f172a;
+        transition:transform .2s ease;}
+        button:hover{transform:scale(1.05)}
+        #resultado{margin-top:24px;padding:16px;background:#fff1;border-radius:12px;font-weight:600}
+    </style>
+    </head>
+    <body>
+    <header class="banner">
+        <div class="avatar"><div class="initials">AO</div></div>
+        <div>
+        <h1 class="title">Alessandro Olivares</h1>
+        <p>Formulario de Registro de Alumno</p>
+        </div>
+    </header>
+
+    <form id="formAlumno">
         {% csrf_token %}
-        <label for="rutAlumno">RUT:</label>
-        <input type="text" id="rutAlumno" name="rutAlumno" required><br><br>
+        <label for="rutAlumno">Rut:</label>
+        <input type="text" id="rutAlumno" name="rutAlumno" required>
 
         <label for="nombreAlumno">Nombre:</label>
-        <input type="text" id="nombreAlumno" name="nombreAlumno" required><br><br>
+        <input type="text" id="nombreAlumno" name="nombreAlumno" required>
 
         <label for="apellidoPaterno">Apellido Paterno:</label>
-        <input type="text" id="apellidoPaterno" name="apellidoPaterno" required><br><br>
+        <input type="text" id="apellidoPaterno" name="apellidoPaterno" required>
 
         <label for="apellidoMaterno">Apellido Materno:</label>
-        <input type="text" id="apellidoMaterno" name="apellidoMaterno" required><br><br>
+        <input type="text" id="apellidoMaterno" name="apellidoMaterno" required>
 
-        <label for="fechaDeNacimiento">Fecha de Nacimiento:</label>
-        <input type="date" id="fechaDeNacimiento" name="fechaDeNacimiento" required><br><br>
+        <label for="fechaDeNacimiento">Fecha de nacimiento:</label>
+        <input type="date" id="fechaDeNacimiento" name="fechaDeNacimiento" required>
 
-        <button type="submit">Enviar</button>
+        <button type="submit">Enviar datos</button>
     </form>
+
+    <div id="resultado"></div>
+
+    <script>
+        document.getElementById("formAlumno").addEventListener("submit", function(e){
+        e.preventDefault(); // Evita recargar la página
+
+        const rut = document.getElementById("rutAlumno").value;
+        const nombre = document.getElementById("nombreAlumno").value;
+        const paterno = document.getElementById("apellidoPaterno").value;
+        const materno = document.getElementById("apellidoMaterno").value;
+        const fecha = document.getElementById("fechaDeNacimiento").value;
+
+        // Concatenamos con ;
+        const resultado = `${rut}; ${nombre}; ${paterno}; ${materno}; ${fecha}`;
+        document.getElementById("resultado").textContent = resultado;
+        });
+    </script>
 </body>
 </html>
